btrfs: avoid starting new transaction when cleaning qgroup during subvolume drop (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5555,6 +5555,7 @@
 	patches.suse/platform-x86-intel-pmc-fix-ltr-decode-in-pmc_core_lt.patch
 	patches.suse/btrfs-fix-assertion-failure-when-splitting-ordered-extent-after-transaction-abort.patch
 	patches.suse/btrfs-fix-use-after-free-when-attempting-to-join-an-.patch
+	patches.suse/btrfs-avoid-starting-new-transaction-when-cleaning-q.patch
 	patches.suse/net-ipv6-fix-dst-refleaks-in-rpl-seg6-and-ioam6-lwtu.patch
 	patches.suse/net-ipv6-fix-dst-ref-loops-in-rpl-seg6-and-ioam6-lwt.patch
 	patches.suse/ice-Add-check-for-devm_kzalloc.patch
