net/sched: sch_qfq: Avoid triggering might_sleep in atomic context in qfq_delete_class (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10324,6 +10324,7 @@
 	patches.suse/Revert-drm-nouveau-check-ioctl-command-codes-better.patch
 	patches.suse/drm-bridge-ti-sn65dsi86-Remove-extra-semicolon-in-ti.patch
 	patches.suse/bus-fsl-mc-Fix-potential-double-device-reference-in-.patch
+	patches.suse/net-sched-sch_qfq-Avoid-triggering-might_sleep-in-at.patch
 	patches.suse/can-netlink-can_changelink-fix-NULL-pointer-deref-of.patch
 	patches.suse/s390-ism-fix-concurrency-management-in-ism_cmd.patch
 	patches.suse/ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN-16-lap.patch
