--- a/series.conf
+++ b/series.conf
@@ -10444,6 +10444,7 @@
 	patches.suse/wifi-iwlwifi-Fix-error-code-in-iwl_op_mode_dvm_start.patch
 	patches.suse/net-sched-Restrict-conditions-for-adding-duplicating.patch
 	patches.suse/RDMA-mlx5-Fix-UMR-modifying-of-mkey-page-size.patch
+	patches.suse/tcp-call-tcp_measure_rcv_mss-for-ooo-packets.patch
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 	patches.suse/wifi-rtl8xxxu-Fix-RX-skb-size-for-aggregation-disabl.patch
 	patches.suse/wifi-rtw88-Fix-macid-assigned-to-TDLS-station.patch
