KVM: arm64: Don't free hyp pages with pKVM on GICv2 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10167,6 +10167,7 @@
 	patches.suse/eventpoll-don-t-decrement-ep-refcount-while-still-ho.patch
 	patches.suse/KVM-arm64-Adjust-range-correctly-during-host-stage-2.patch
 	patches.suse/KVM-arm64-Fix-error-path-in-init_hyp_mode.patch
+	patches.suse/KVM-arm64-Don-t-free-hyp-pages-with-pKVM-on-GICv2.patch
 	patches.suse/KVM-TDX-Exit-to-userspace-for-SetupEventNotifyInterr.patch
 	patches.suse/KVM-TDX-Report-supported-optional-TDVMCALLs-in-TDX-c.patch
 	patches.suse/KVM-SVM-Reject-SEV-ES-intra-host-migration-if-vCPU-c.patch
