--- a/series.conf
+++ b/series.conf
@@ -10481,6 +10481,7 @@
 	patches.suse/xen-fix-UAF-in-dmabuf_exp_from_pages.patch
 	patches.suse/xen-gntdev-remove-struct-gntdev_copy_batch-from-stac.patch
 	patches.suse/KVM-x86-Avoid-calling-kvm_is_mmio_pfn-when-kvm_x86_o.patch
+	patches.suse/KVM-Bound-the-number-of-dirty-ring-entries-in-a-sing.patch
 	patches.suse/KVM-TDX-Use-kvm_arch_vcpu.host_debugctl-to-restore-t.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
 	patches.suse/KVM-x86-Drop-pending_smi-vs.-INIT_RECEIVED-check-whe.patch
