--- a/series.conf
+++ b/series.conf
@@ -10483,6 +10483,7 @@
 	patches.suse/KVM-x86-Avoid-calling-kvm_is_mmio_pfn-when-kvm_x86_o.patch
 	patches.suse/KVM-Bound-the-number-of-dirty-ring-entries-in-a-sing.patch
 	patches.suse/KVM-Bail-from-the-dirty-ring-reset-flow-if-a-signal-.patch
+	patches.suse/KVM-Conditionally-reschedule-when-resetting-the-dirt.patch
 	patches.suse/KVM-TDX-Use-kvm_arch_vcpu.host_debugctl-to-restore-t.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
 	patches.suse/KVM-x86-Drop-pending_smi-vs.-INIT_RECEIVED-check-whe.patch
