--- a/series.conf
+++ b/series.conf
@@ -11056,6 +11056,7 @@
 	patches.kabi/hci_dev-centralize-extra-lock.patch
 	patches.kabi/drm_gem-kabi-workaround.patch
 	patches.kabi/sprintf.h-mask-additional-include.patch
+	patches.kabi/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 
 	########################################################
 	# preempt-rt backport converged
