KVM: SVM: Fix SNP AP destroy race with VMRUN (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53671,6 +53671,7 @@
 	patches.suse/Input-gpio-keys-fix-a-sleep-while-atomic-with-PREEMP.patch
 	patches.suse/Input-gpio-keys-fix-possible-concurrent-access-in-gp.patch
 	patches.suse/Input-ims-pcu-check-record-size-in-ims_pcu_flash_fir.patch
+	patches.suse/KVM-SVM-Fix-SNP-AP-destroy-race-with-VMRUN.patch
 	patches.suse/hwmon-pmbus-max34440-Fix-support-for-max34451.patch
 	patches.suse/hwmon-asus-ec-sensors-check-sensor-index-in-read_str.patch
 	patches.suse/mfd-exynos-lpass-Avoid-calling-exynos_lpass_disable-.patch
