selftests/bpf: Use asm constraint "m" for LoongArch (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -3229,6 +3229,7 @@
 	patches.suse/cpufreq-amd-pstate-Use-boost-numerator-for-upper-bound-of-frequencies.patch
 	patches.suse/media-dvb-frontends-dib3000mb-fix-uninit-value-in-di.patch
 	patches.suse/media-mediatek-vcodec-mark-vdec_vp9_slice_map_counts.patch
+	patches.suse/selftests-bpf-Use-asm-constraint-m-for-LoongArch.patch
 	patches.suse/selftests-bpf-Fix-compilation-error-in-get_uprobe_of.patch
 	patches.suse/tcp_bpf-Charge-receive-socket-buffer-in-bpf_tcp_ingr.patch
 	patches.suse/tcp_bpf-Add-sk_rmem_alloc-related-logic-for-tcp_bpf-.patch
