selftests/bpf: add test for softlock when modifying hashmap while iterating (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8447,6 +8447,7 @@
 	patches.suse/scsi-Improve-CDL-control.patch
 	patches.suse/selftests-bpf-Mitigate-sockmap_ktls-disconnect_after.patch
 	patches.suse/bpf-fix-possible-endless-loop-in-BPF-map-iteration.patch
+	patches.suse/selftests-bpf-add-test-for-softlock-when-modifying-h.patch
 	patches.suse/Revert-drm-meson-vclk-fix-calculation-of-59.94-fract.patch
 	patches.suse/drm-meson-use-unsigned-long-long-Hz-for-frequency-ty.patch
 	patches.suse/drm-panel-jd9365da-fix-reset-signal-polarity-in-unpr.patch
