selftests/bpf: Mitigate sockmap_ktls disconnect_after_delete failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -8445,6 +8445,7 @@
 	patches.suse/ata-libata-scsi-Fix-ata_msense_control_ata_feature.patch
 	patches.suse/ata-libata-scsi-Improve-CDL-control.patch
 	patches.suse/scsi-Improve-CDL-control.patch
+	patches.suse/selftests-bpf-Mitigate-sockmap_ktls-disconnect_after.patch
 	patches.suse/Revert-drm-meson-vclk-fix-calculation-of-59.94-fract.patch
 	patches.suse/drm-meson-use-unsigned-long-long-Hz-for-frequency-ty.patch
 	patches.suse/drm-panel-jd9365da-fix-reset-signal-polarity-in-unpr.patch
