bpf: Return prog btf_id without capable check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7698,6 +7698,7 @@
 	patches.suse/bpf-Fix-deadlock-between-rcu_tasks_trace-and-event_m.patch
 	patches.suse/bpf-docs-Fix-broken-link-to-renamed-bpf_iter_task_vm.patch
 	patches.suse/selftests-bpf-Fix-string-read-in-strncmp-benchmark.patch
+	patches.suse/bpf-Return-prog-btf_id-without-capable-check.patch
 	patches.suse/bpf-Only-fails-the-busy-counter-check-in-bpf_cgrp_st.patch
 	patches.suse/bpf-Reject-attaching-fexit-fmod_ret-to-__noreturn-fu.patch
 	patches.suse/selftests-bpf-Add-selftest-for-attaching-fexit-to-__.patch
