--- a/series.conf
+++ b/series.conf
@@ -9341,6 +9341,7 @@
 	patches.suse/bpf-sockmap-Fix-panic-when-calling-skb_linearize.patch
 	patches.suse/selftest-bpf-benchs-Add-benchmark-for-sockmap-usage.patch
 	patches.suse/bpf-Use-proper-type-to-calculate-bpf_raw_tp_null_arg.patch
+	patches.suse/libbpf-Add-identical-pointer-detection-to-btf_dedup_.patch
 	patches.suse/selftests-bpf-Fix-caps-for-__xlated-jited_unpriv.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
 	patches.suse/bpf-sockmap-Avoid-using-sk_socket-after-free-when-se.patch
