bpf: Use proper type to calculate bpf_raw_tp_null_args.mask index (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9340,6 +9340,7 @@
 	patches.suse/bpf-sockmap-fix-duplicated-data-transmission.patch
 	patches.suse/bpf-sockmap-Fix-panic-when-calling-skb_linearize.patch
 	patches.suse/selftest-bpf-benchs-Add-benchmark-for-sockmap-usage.patch
+	patches.suse/bpf-Use-proper-type-to-calculate-bpf_raw_tp_null_arg.patch
 	patches.suse/selftests-bpf-Fix-caps-for-__xlated-jited_unpriv.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
 	patches.suse/bpf-sockmap-Avoid-using-sk_socket-after-free-when-se.patch
