bpf: Allow XDP dev-bound programs to perform XDP_REDIRECT into maps (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9342,6 +9342,7 @@
 	patches.suse/selftest-bpf-benchs-Add-benchmark-for-sockmap-usage.patch
 	patches.suse/bpf-Use-proper-type-to-calculate-bpf_raw_tp_null_arg.patch
 	patches.suse/libbpf-Add-identical-pointer-detection-to-btf_dedup_.patch
+	patches.suse/bpf-Allow-XDP-dev-bound-programs-to-perform-XDP_REDI.patch
 	patches.suse/selftests-bpf-Fix-caps-for-__xlated-jited_unpriv.patch
 	patches.suse/s390-bpf-Store-backchain-even-for-leaf-progs.patch
 	patches.suse/bpf-sockmap-Avoid-using-sk_socket-after-free-when-se.patch
