tools/resolve_btfids: Fix build when cross compiling kernel with clang (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9841,6 +9841,7 @@
 	patches.suse/tools-power-turbostat-Fix-AMD-package-energy-reporting.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
+	patches.suse/tools-resolve_btfids-Fix-build-when-cross-compiling-.patch
 	patches.suse/pinctrl-qcom-pinctrl-qcm2290-Add-missing-pins.patch
 	patches.suse/pinctrl-st-Drop-unused-st_gpio_bank-function.patch
 	patches.suse/ptp-remove-ptp-n_vclocks-check-logic-in-ptp_vclock_i.patch
