--- a/series.conf
+++ b/series.conf
@@ -10271,6 +10271,7 @@
 	patches.suse/drm-mediatek-only-announce-AFBC-if-really-supported.patch
 	patches.suse/drm-xe-mocs-Initialize-MOCS-index-early.patch
 	patches.suse/drm-xe-pf-Prepare-to-stop-SR-IOV-support-prior-GT-re.patch
+	patches.suse/bpf-Reject-p-format-string-in-bprintf-like-helpers.patch
 	patches.suse/s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-NULL-again.patch
 	patches.suse/KVM-TDX-Don-t-report-base-TDVMCALLs.patch
 	patches.suse/Documentation-KVM-Fix-unexpected-unindent-warning.patch
