--- a/series.conf
+++ b/series.conf
@@ -10493,6 +10493,7 @@
 	patches.suse/net-phy-micrel-fix-KSZ8081-KSZ8091-cable-test.patch
 	patches.suse/can-peak_usb-fix-USB-FD-devices-potential-malfunctio.patch
 	patches.suse/selftests-bpf-fix-signedness-bug-in-redir_partial.patch
+	patches.suse/selftests-bpf-Fix-unintentional-switch-case-fall-thr.patch
 	patches.suse/iommu-amd-Fix-geometry.aperture_end-for-V2-tables.patch
 	patches.suse/iommu-arm-smmu-qcom-Add-SM6115-MDSS-compatible.patch
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
