--- a/series.conf
+++ b/series.conf
@@ -10485,6 +10485,7 @@
 	patches.suse/wifi-mac80211-Write-cnt-before-copying-in-ieee80211_.patch
 	patches.suse/wifi-nl80211-Set-num_sub_specs-before-looping-throug.patch
 	patches.suse/bpf-Reject-narrower-access-to-pointer-ctx-fields.patch
+	patches.suse/selftests-bpf-Test-invalid-narrower-ctx-load.patch
 	patches.suse/Bluetooth-hci_event-Mask-data-status-from-LE-ext-adv.patch
 	patches.suse/can-kvaser_pciefd-Store-device-channel-index.patch
 	patches.suse/can-kvaser_usb-Assign-netdev.dev_port-based-on-devic.patch
