selftests/bpf: Add negative test cases for snprintf (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10272,6 +10272,7 @@
 	patches.suse/drm-xe-mocs-Initialize-MOCS-index-early.patch
 	patches.suse/drm-xe-pf-Prepare-to-stop-SR-IOV-support-prior-GT-re.patch
 	patches.suse/bpf-Reject-p-format-string-in-bprintf-like-helpers.patch
+	patches.suse/selftests-bpf-Add-negative-test-cases-for-snprintf.patch
 	patches.suse/s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-NULL-again.patch
 	patches.suse/KVM-TDX-Don-t-report-base-TDVMCALLs.patch
 	patches.suse/Documentation-KVM-Fix-unexpected-unindent-warning.patch
