md/md-cluster: handle REMOVE message earlier (bsc#1247057).

--- a/series.conf
+++ b/series.conf
@@ -10740,6 +10740,7 @@
 	# Block layer
 	########################################################
 	patches.suse/md-display-timeout-error.patch
+	patches.suse/md-md-cluster-handle-REMOVE-message-earlier.patch
 
 	########################################################
 	# Networking core
