--- a/series.conf
+++ b/series.conf
@@ -33433,6 +33433,7 @@
 	patches.suse/rtc-pcf85063-fix-incorrect-maximum-clock-rate-handli.patch
 	patches.suse/rtc-pcf8563-fix-incorrect-maximum-clock-rate-handlin.patch
 	patches.suse/rtc-rv3028-fix-incorrect-maximum-clock-rate-handling.patch
+	patches.suse/net-usbnet-Fix-the-wrong-netif_carrier_on-call.patch
 
 	########################################################
 	# end of sorted patches
