integrity/platform_certs: Allow loading of keys in the static key management mode (jsc#PED-13345 jsc#PED-13343).

--- a/series.conf
+++ b/series.conf
@@ -11124,6 +11124,7 @@
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
 	patches.suse/powerpc-pseries-Correct-secvar-format-representation.patch
 	patches.suse/powerpc-secvar-Expose-secvars-relevant-to-the-key-ma.patch
+	patches.suse/integrity-platform_certs-Allow-loading-of-keys-in-th.patch
 	patches.suse/arch-powerpc-Remove-.interp-section-in-vmlinux.patch
 	patches.suse/staging-media-atomisp-Fix-stack-buffer-overflow-in-g.patch
 	patches.suse/net-mana-Expose-additional-hardware-counters-for-dro.patch
