--- a/series.conf
+++ b/series.conf
@@ -11122,6 +11122,7 @@
 	patches.suse/ACPI-Return-ENODEV-from-acpi_parse_spcr-when-SPCR-su.patch
 	patches.suse/ACPI-Suppress-misleading-SPCR-console-message-when-S.patch
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
+	patches.suse/powerpc-pseries-Correct-secvar-format-representation.patch
 	patches.suse/arch-powerpc-Remove-.interp-section-in-vmlinux.patch
 	patches.suse/staging-media-atomisp-Fix-stack-buffer-overflow-in-g.patch
 	patches.suse/net-mana-Expose-additional-hardware-counters-for-dro.patch
