--- a/series.conf
+++ b/series.conf
@@ -33289,6 +33289,7 @@
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/powerpc-pseries-Correct-secvar-format-representation.patch
+	patches.suse/powerpc-secvar-Expose-secvars-relevant-to-the-key-ma.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
