integrity/platform_certs: Allow loading of keys in the static key management mode (jsc#PED-13345 jsc#PED-13343).

--- a/series.conf
+++ b/series.conf
@@ -33290,6 +33290,7 @@
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/powerpc-pseries-Correct-secvar-format-representation.patch
 	patches.suse/powerpc-secvar-Expose-secvars-relevant-to-the-key-ma.patch
+	patches.suse/integrity-platform_certs-Allow-loading-of-keys-in-th.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
