selftests/bpf: adapt one more case in test_lru_map to the new target_free (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10006,6 +10006,7 @@
 	patches.suse/scsi-megaraid_sas-Fix-invalid-node-index.patch
 	patches.suse/spi-spi-cadence-quadspi-Fix-pm-runtime-unbalance.patch
 	patches.suse/bpf-Adjust-free-target-to-avoid-global-starvation-of.patch
+	patches.suse/selftests-bpf-adapt-one-more-case-in-test_lru_map-to.patch
 	patches.suse/msft-hv-3283-net-mana-Record-doorbell-physical-address-in-PF-mode.patch
 	patches.suse/net-usb-qmi_wwan-add-SIMCom-8230C-composition.patch
 	patches.suse/bridge-mcast-Fix-use-after-free-during-router-port-configu.patch
