--- a/series.conf
+++ b/series.conf
@@ -30393,6 +30393,7 @@
 	patches.suse/wifi-rtlwifi-destroy-workqueue-at-rtl_deinit_core.patch
 	patches.suse/wifi-rtlwifi-fix-memory-leaks-and-invalid-access-at-.patch
 	patches.suse/wifi-rtlwifi-pci-wait-for-firmware-loading-before-re.patch
+	patches.suse/af_unix-Add-a-prompt-to-CONFIG_AF_UNIX_OOB.patch
 	patches.suse/udp-Deal-with-race-between-UDP-socket-address-change-and-r.patch
 	patches.suse/team-prevent-adding-a-device-which-is-already-a-team.patch
 	patches.suse/ax25-rcu-protect-dev-ax25_ptr.patch
