nvme-tcp: fix selinux denied when calling sock_sendmsg (bsc#1247497).

--- a/series.conf
+++ b/series.conf
@@ -7021,6 +7021,7 @@
 	patches.suse/nvme-pci-remove-stale-comment.patch
 	patches.suse/nvmet-fc-Remove-unused-functions.patch
 	patches.suse/nvmet-pci-epf-Always-configure-BAR0-as-64-bit.patch
+	patches.suse/nvme-tcp-fix-selinux-denied-when-calling-sock_sendmsg.patch
 	patches.suse/ata-libata-core-Add-external-to-the-libata.force-ker.patch
 	patches.suse/ata-libata-eh-Do-not-use-ATAPI-DMA-for-a-device-limi.patch
 	patches.suse/ahci-add-PCI-ID-for-Marvell-88SE9215-SATA-Controller.patch
