btrfs: fix log tree replay failure due to file with 0 links and extents (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33435,6 +33435,7 @@
 	patches.suse/rtc-pcf8563-fix-incorrect-maximum-clock-rate-handlin.patch
 	patches.suse/rtc-rv3028-fix-incorrect-maximum-clock-rate-handling.patch
 	patches.suse/net-usbnet-Fix-the-wrong-netif_carrier_on-call.patch
+	patches.suse/btrfs-fix-log-tree-replay-failure-due-to-file-with-0.patch
 
 	########################################################
 	# end of sorted patches
