io_uring: fix potential page leak in io_sqe_buffer_register() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53951,6 +53951,7 @@
 	patches.suse/drm-xe-Fix-memset-on-iomem.patch
 	patches.suse/drm-xe-Fix-early-wedge-on-GuC-load-failure.patch
 	patches.suse/io_uring-sqpoll-don-t-put-task_struct-on-tctx-setup-.patch
+	patches.suse/io_uring-fix-potential-page-leak-in-io_sqe_buffer_re.patch
 	patches.suse/aoe-clean-device-rq_list-in-aoedev_downdev.patch
 	patches.suse/ublk-santizize-the-arguments-from-userspace-when-add.patch
 	patches.suse/ALSA-hda-intel-Add-Thinkpad-E15-to-PM-deny-list.patch
