btrfs: fix log tree replay failure due to file with 0 links and extents (bsc#1247726).

--- a/series.conf
+++ b/series.conf
@@ -55,7 +55,6 @@
 	########################################################
 	# sorted patches
 	########################################################
-
 	patches.suse/dt-bindings-pinctrl-Add-RaspberryPi-RP1-gpio-pinctrl-pinmux-bindings.patch
 	patches.suse/dt-bindings-misc-Add-device-specific-bindings-for-RaspberryPi-RP1.patch
 	patches.suse/arm64-dts-rp1-Add-support-for-RaspberryPi-s-RP1-device.patch
@@ -68,6 +67,7 @@
 	patches.suse/pinctrl-rp1-Implement-RaspberryPi-RP1-gpio-support.patch
 	patches.suse/misc-rp1-RaspberryPi-RP1-misc-driver.patch
 	patches.suse/pinctrl-rp1-Implement-RaspberryPi-RP1-pinmux-pinconf-support.patch
+	patches.suse/btrfs-fix-log-tree-replay-failure-due-to-file-with-0-.patch
 
 	# https://github.com/broadcom/stblinux.git next
 	patches.suse/dt-bindings-clock-rp1-Add-missing-MIPI-DSI-defines.patch
