--- a/series.conf
+++ b/series.conf
@@ -10587,6 +10587,7 @@
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
 	patches.suse/maple_tree-fix-status-setup-on-restore-to-active.patch
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
+	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
