--- a/series.conf
+++ b/series.conf
@@ -174,6 +174,7 @@
 	patches.suse/0001-initcall_blacklist-Does-not-allow-kernel_lockdown-be.patch
 
 	# crypto
+	patches.suse/crypto-hkdf-skip-TVs-with-unapproved-salt-lengths-in.patch
 
 	########################################################
 	# Virtualization
