- NFSv4: fairly test all delegations on a SEQ4_ revocation   (bsc#1246211). - Refresh   patches.kabi/kabi-fix-for-NFSv4-Prevent-NULL-pointer-dereference-in.patch. - Refresh   patches.suse/NFS-Avoid-unnecessary-rescanning-of-the-per-server-delegation-list.patch. - Refresh   patches.suse/NFSv4-Prevent-NULL-pointer-dereference-in-nfs42_complete_copies.patch.

--- a/series.conf
+++ b/series.conf
@@ -45648,6 +45648,7 @@
 	patches.suse/xfs-fix-units-conversion-error-in-xfs_bmap_del_extent_delay.patch
 	patches.suse/xfs-make-sure-maxlen-is-still-congruent-with-prod-when-rounding-down.patch
 	patches.suse/SUNRPC-ECONNRESET-might-require-a-rebind.patch
+	patches.suse/NFSv4-fairly-test-all-delegations-on-a-SEQ4_-revocation.patch
 	patches.suse/SUNRPC-Add-an-IS_ERR-check-back-to-where-it-was.patch
 	patches.suse/NFSv4.1-fix-SP4_MACH_CRED-protection-for-pnfs-IO.patch
 	patches.suse/SUNRPC-Fix-RPC-client-cleaned-up-the-freed-pipefs-de.patch
