kabi fix for NFSv4: fairly test all delegations on a SEQ4_ revocation (bsc#1246211).

--- a/series.conf
+++ b/series.conf
@@ -51195,6 +51195,7 @@
 	patches.kabi/kABI-Fix-kABI-after-backport-CVE-2025-21839.patch
 	patches.kabi/ax25-rcu-protect-dev-ax25_ptr.patch
 	patches.kabi/cpufreq-kABI-workaround.patch
+	patches.suse/kabi-fix-for-NFSv4-fairly-test-all-delegations-on-a-SEQ4_-revocation.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
