--- a/series.conf
+++ b/series.conf
@@ -10159,6 +10159,7 @@
 	patches.suse/ASoC-fsl_sai-Force-a-software-reset-when-starting-in.patch
 	patches.suse/ASoC-cs35l56-probe-should-fail-if-the-device-ID-is-n.patch
 	patches.suse/ALSA-hda-realtek-Enable-headset-Mic-on-Positivo-K116.patch
+	patches.suse/module-Fix-memory-deallocation-on-error-path-in-move_modul.patch
 	patches.suse/pwm-Fix-invalid-state-detection.patch
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
