- audit,module: restore audit logging in load failure case   (git-fixes). - kABI: Fix the module::name type in audit_context (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10354,6 +10354,7 @@
 	patches.suse/xfs-remove-unused-trace-event-xfs_reflink_cow_enospc.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
+	patches.suse/audit-module-restore-audit-logging-in-load-failure-case.patch
 	patches.suse/PM-devfreq-Check-governor-before-using-governor-name.patch
 	patches.suse/PM-devfreq-Fix-a-index-typo-in-trans_stat.patch
 	patches.suse/PM-runtime-Take-active-children-into-account-in-pm_r.patch
@@ -11040,6 +11041,7 @@
 	patches.kabi/drm_gem-kabi-workaround.patch
 	patches.kabi/sprintf.h-mask-additional-include.patch
 	patches.kabi/kABI-restore-layout-of-struct-msi_desc.patch
+	patches.kabi/kABI-Fix-the-module-name-type-in-audit_context.patch
 
 	########################################################
 	# preempt-rt backport converged
