module: Restore the moduleparam prefix length check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10590,6 +10590,7 @@
 	patches.suse/maple_tree-fix-status-setup-on-restore-to-active.patch
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
 	patches.suse/module-Remove-unnecessary-1-from-last_unloaded_module-name.patch
+	patches.suse/module-Restore-the-moduleparam-prefix-length-check.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
