--- a/series.conf
+++ b/series.conf
@@ -10589,6 +10589,7 @@
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
 	patches.suse/maple_tree-fix-status-setup-on-restore-to-active.patch
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
+	patches.suse/module-Remove-unnecessary-1-from-last_unloaded_module-name.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
