trace/ring-buffer: Do not use TP_printk() formatting for boot mapped buffers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -3178,6 +3178,7 @@
 	patches.suse/octeontx2-pf-fix-error-handling-of-devlink-port-in-r.patch
 	patches.suse/netfilter-ipset-Fix-for-recursive-locking-warning.patch
 	patches.suse/ring-buffer-Fix-overflow-in-__rb_map_vma.patch
+	patches.suse/trace-ring-buffer-Do-not-use-TP_printk-formatting-for-boot.patch
 	patches.suse/i915-guc-Reset-engine-utilization-buffer-before-regi.patch
 	patches.suse/i915-guc-Ensure-busyness-counter-increases-motonical.patch
 	patches.suse/i915-guc-Accumulate-active-runtime-on-gt-reset.patch
