tracing/kprobe: Make trace_kprobe's module callback called after jump_label update (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -3294,6 +3294,7 @@
 	patches.suse/ASoC-mediatek-disable-buffer-pre-allocation.patch
 	patches.suse/tracing-Prevent-bad-count-for-tracing_cpumask_write.patch
 	patches.suse/stddef-make-__struct_group-UAPI-C-friendly.patch
+	patches.suse/tracing-kprobe-Make-trace_kprobe-s-module-callback-called-.patch
 	patches.suse/powerpc-pseries-vas-Add-close-callback-in-vas_vm_ops.patch
 	patches.suse/power-supply-gpio-charger-Fix-set-charge-current-lim.patch
 	patches.suse/power-supply-cros_charge-control-add-mutex-for-drive.patch
