--- a/series.conf
+++ b/series.conf
@@ -3332,6 +3332,7 @@
 	patches.suse/pmdomain-imx-gpcv2-fix-an-OF-node-reference-leak-in-.patch
 	patches.suse/pmdomain-core-add-dummy-release-function-to-genpd-de.patch
 	patches.suse/fgraph-Add-READ_ONCE-when-accessing-fgraph_array.patch
+	patches.suse/ftrace-Fix-function-profiler-s-filtering-functionality.patch
 	patches.suse/drm-xe-Revert-some-changes-that-break-a-mesa-debug-t.patch
 	patches.suse/drm-xe-Use-non-interruptible-wait-when-moving-BO-to-.patch
 	patches.suse/drm-xe-Wait-for-migration-job-before-unmapping-pages.patch
