--- a/series.conf
+++ b/series.conf
@@ -3550,6 +3550,7 @@
 	patches.suse/io_uring-sqpoll-zero-sqd-thread-on-tctx-errors.patch
 	patches.suse/block-bfq-fix-waker_bfqq-UAF-after-bfq_split_bfqq.patch
 	patches.suse/hwmon-drivetemp-Fix-driver-producing-garbage-data-wh.patch
+	patches.suse/tracing-kprobes-Fix-to-free-objects-when-failed-to-copy-a-.patch
 	patches.suse/x86-static-call-Remove-early_boot_irqs_disabled-chec.patch
 	patches.suse/x86-fpu-Ensure-shadow-stack-is-active-before-getting-regis.patch
 	patches.suse/KVM-e500-always-restore-irqs.patch
