--- a/series.conf
+++ b/series.conf
@@ -4028,6 +4028,7 @@
 	patches.suse/printk-Defer-legacy-printing-when-holding-printk_cpu_sync.patch
 	patches.suse/genirq-Make-handle_enforce_irqctx-unconditionally-av.patch
 	patches.suse/torture-Add-dowarn-argument-to-torture_sched_setaffinity.patch
+	patches.suse/ring-buffer-Make-reading-page-consistent-with-the-code-log.patch
 	patches.suse/drm-rockchip-cdn-dp-Use-drm_connector_helper_hpd_irq.patch
 	patches.suse/drm-v3d-Fix-performance-counter-source-settings-on-V.patch
 	patches.suse/accel-ivpu-Fix-Qemu-crash-when-running-in-passthroug.patch
