Revert "vgacon: Add check for vc_origin address range in vgacon_scroll()" (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33444,6 +33444,7 @@
 	patches.suse/net-usbnet-Fix-the-wrong-netif_carrier_on-call.patch
 	patches.suse/btrfs-fix-log-tree-replay-failure-due-to-file-with-0.patch
 	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
+	patches.suse/Revert-vgacon-Add-check-for-vc_origin-address-range-.patch
 
 	########################################################
 	# end of sorted patches
