--- a/series.conf
+++ b/series.conf
@@ -10739,6 +10739,7 @@
 	patches.suse/btrfs-fix-log-tree-replay-failure-due-to-file-with-0.patch
 	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
 	patches.suse/Revert-vgacon-Add-check-for-vc_origin-address-range-.patch
+	patches.suse/drm-amd-display-Don-t-overwrite-dce60_clk_mgr.patch
 
 	########################################################
 	# end of sorted patches
