--- a/blacklist.conf
+++ b/blacklist.conf
@@ -476,3 +476,4 @@ d1fbe1ebf4a12cabd7945335d5e47718cb2bef99 # irrelevant in our config, our kernels
 378bdb97405a00bf03d8d993435c83add1688e36 # only (nonserious) bug on 32b, KABI breakage there
 fdc5001b002eaca9989b5f3563245662fd1e4d40 # irrelevant in our config CONFIG_VM_EVENT_COUNTERS=y
 452f4b31e3f70a52b97890888eeb9eaa9a87139a # cleanup breaking kABI
+7d137e604aaacf2723ced2fca0b46b3f563e1d5e # fgraph performance improvement, not a fix
