--- a/series.conf
+++ b/series.conf
@@ -4618,6 +4618,7 @@
 	patches.suse/ktest.pl-Fix-typo-accesing.patch
 	patches.suse/tracing-Switch-trace.c-code-over-to-use-guard.patch
 	patches.suse/tracing-Switch-trace_events_hist.c-code-over-to-use-guard.patch
+	patches.suse/ring-buffer-Do-not-allow-events-in-NMI-with-generic-atomic.patch
 	patches.suse/sched_ext-Use-the-NUMA-scheduling-domain-for-NUMA-optimizations.patch
 	patches.suse/sched_ext-Use-sizeof_field-for-key_len-in-dsq_hash_params.patch
 	patches.suse/sched_ext-Use-str_enabled_disabled-helper-in-update_selcpu_topology.patch
