fgraph: Fix set_graph_notrace with setting TRACE_GRAPH_NOTRACE_BIT (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -5631,6 +5631,7 @@
 	patches.suse/sched-debug-Provide-slice-length-for-fair-tasks.patch
 	patches.suse/clocksource-Use-migrate_disable-to-avoid-calling-get_random_u32-in-atomic-context.patch
 	patches.suse/x86-boot-Use-std-gnu11-to-fix-build-with-GCC-15.patch
+	patches.suse/fgraph-Fix-set_graph_notrace-with-setting-TRACE_GRAPH_NOTR.patch
 	patches.suse/rust-kbuild-add-fzero-init-padding-bits-to-bindgen_s.patch
 	patches.suse/scsi-core-Use-GFP_NOIO-to-avoid-circular-locking-dependenc.patch
 	patches.suse/scsi-core-Do-not-retry-I-Os-during-depopulation.patch
