tracing/kprobe: Make trace_kprobe's module callback called after jump_label update (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -30056,6 +30056,7 @@
 	patches.suse/ASoC-rt722-add-delay-time-to-wait-for-the-calibratio.patch
 	patches.suse/ASoC-mediatek-disable-buffer-pre-allocation.patch
 	patches.suse/tracing-Prevent-bad-count-for-tracing_cpumask_write.patch
+	patches.suse/tracing-kprobe-Make-trace_kprobe-s-module-callback-called-.patch
 	patches.suse/powerpc-pseries-vas-Add-close-callback-in-vas_vm_ops.patch
 	patches.suse/power-supply-gpio-charger-Fix-set-charge-current-lim.patch
 	patches.suse/i2c-imx-add-imx7d-compatible-string-for-applying-err.patch
