tracing/kprobes: Fix to free objects when failed to copy a symbol (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -30191,6 +30191,7 @@
 	patches.suse/io_uring-eventfd-ensure-io_eventfd_signal-defers-ano.patch
 	patches.suse/block-bfq-fix-waker_bfqq-UAF-after-bfq_split_bfqq.patch
 	patches.suse/hwmon-drivetemp-Fix-driver-producing-garbage-data-wh.patch
+	patches.suse/tracing-kprobes-Fix-to-free-objects-when-failed-to-copy-a-.patch
 	patches.suse/x86-static-call-Remove-early_boot_irqs_disabled-chec.patch
 	patches.suse/x86-fpu-Ensure-shadow-stack-is-active-before-getting.patch
 	patches.suse/KVM-s390-vsie-fix-virtual-physical-address-in-unpin_scb.patch
