blacklist.conf: add not wanted tracing commits

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1058,3 +1058,6 @@ ed99822817cb728eee8786c1c921c69c6be206fe # lockdep infrastructure
 8647ece4814f3bfdb5f7a8e19f882c9b89299a07 # mainly lockdep infrastructure
 378bdb97405a00bf03d8d993435c83add1688e36 # only (nonserious) bug on 32b, KABI breakage there
 fdc5001b002eaca9989b5f3563245662fd1e4d40 # irrelevant in our config CONFIG_VM_EVENT_COUNTERS=y
+452f4b31e3f70a52b97890888eeb9eaa9a87139a # cleanup breaking kABI
+7d137e604aaacf2723ced2fca0b46b3f563e1d5e # fgraph performance improvement, not a fix
+2b36a97aeeb71b1e4a48bfedc7f21f44aeb1e6fb # cleanup, not a fix
