netpoll: prevent hanging NAPI when netcons gets enabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33446,6 +33446,7 @@
 	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
 	patches.suse/Revert-vgacon-Add-check-for-vc_origin-address-range-.patch
 	patches.suse/drm-amd-display-Don-t-overwrite-dce60_clk_mgr.patch
+	patches.suse/netpoll-prevent-hanging-NAPI-when-netcons-gets-enabl.patch
 
 	########################################################
 	# end of sorted patches
