--- a/series.conf
+++ b/series.conf
@@ -33447,6 +33447,7 @@
 	patches.suse/Revert-vgacon-Add-check-for-vc_origin-address-range-.patch
 	patches.suse/drm-amd-display-Don-t-overwrite-dce60_clk_mgr.patch
 	patches.suse/netpoll-prevent-hanging-NAPI-when-netcons-gets-enabl.patch
+	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
 
 	########################################################
 	# end of sorted patches
