--- a/series.conf
+++ b/series.conf
@@ -33448,6 +33448,7 @@
 	patches.suse/drm-amd-display-Don-t-overwrite-dce60_clk_mgr.patch
 	patches.suse/netpoll-prevent-hanging-NAPI-when-netcons-gets-enabl.patch
 	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
+	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
 
 	########################################################
 	# end of sorted patches
