net/sched: mqprio: fix stack out-of-bounds write in tc entry parsing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33450,6 +33450,7 @@
 	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
 	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_.patch
+	patches.suse/net-sched-mqprio-fix-stack-out-of-bounds-write-in-tc.patch
 
 	########################################################
 	# end of sorted patches
