netpoll: prevent hanging NAPI when netcons gets enabled (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10593,6 +10593,7 @@
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
 	patches.suse/maple_tree-fix-status-setup-on-restore-to-active.patch
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
+	patches.suse/netpoll-prevent-hanging-NAPI-when-netcons-gets-enabl.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
