--- a/series.conf
+++ b/series.conf
@@ -10594,6 +10594,7 @@
 	patches.suse/maple_tree-fix-status-setup-on-restore-to-active.patch
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
 	patches.suse/netpoll-prevent-hanging-NAPI-when-netcons-gets-enabl.patch
+	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
