net/sched: taprio: enforce minimum value for picos_per_byte (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10595,6 +10595,7 @@
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
 	patches.suse/netpoll-prevent-hanging-NAPI-when-netcons-gets-enabl.patch
 	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
+	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
