net/packet: fix a race in packet_set_ring() and packet_notifier() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10596,6 +10596,7 @@
 	patches.suse/netpoll-prevent-hanging-NAPI-when-netcons-gets-enabl.patch
 	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
 	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
+	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
