--- a/series.conf
+++ b/series.conf
@@ -10740,6 +10740,7 @@
 	patches.suse/Revert-vgacon-Add-check-for-vc_origin-address-range-.patch
 	patches.suse/drm-amd-display-Don-t-overwrite-dce60_clk_mgr.patch
 	patches.suse/ALSA-intel_hdmi-Fix-off-by-one-error-in-__hdmi_lpe_a.patch
+	patches.suse/ALSA-hda-ca0132-Fix-missing-error-handling-in-ca0132.patch
 
 	########################################################
 	# end of sorted patches
