--- a/series.conf
+++ b/series.conf
@@ -10739,6 +10739,7 @@
 	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
 	patches.suse/Revert-vgacon-Add-check-for-vc_origin-address-range-.patch
 	patches.suse/drm-amd-display-Don-t-overwrite-dce60_clk_mgr.patch
+	patches.suse/ALSA-intel_hdmi-Fix-off-by-one-error-in-__hdmi_lpe_a.patch
 
 	########################################################
 	# end of sorted patches
