gpio: mlxbf2: use platform_get_irq_optional() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10743,6 +10743,7 @@
 	patches.suse/ALSA-hda-ca0132-Fix-missing-error-handling-in-ca0132.patch
 	patches.suse/ASoC-SOF-amd-acp-loader-Use-GFP_KERNEL-for-DMA-alloc.patch
 	patches.suse/ASoC-tas2781-Fix-the-wrong-step-for-TLV-on-tas2781.patch
+	patches.suse/gpio-mlxbf2-use-platform_get_irq_optional.patch
 
 	########################################################
 	# end of sorted patches
