ASoC: tas2781: Fix the wrong step for TLV on tas2781 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10742,6 +10742,7 @@
 	patches.suse/ALSA-intel_hdmi-Fix-off-by-one-error-in-__hdmi_lpe_a.patch
 	patches.suse/ALSA-hda-ca0132-Fix-missing-error-handling-in-ca0132.patch
 	patches.suse/ASoC-SOF-amd-acp-loader-Use-GFP_KERNEL-for-DMA-alloc.patch
+	patches.suse/ASoC-tas2781-Fix-the-wrong-step-for-TLV-on-tas2781.patch
 
 	########################################################
 	# end of sorted patches
