ASoC: SOF: amd: acp-loader: Use GFP_KERNEL for DMA allocations in resume context (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10741,6 +10741,7 @@
 	patches.suse/drm-amd-display-Don-t-overwrite-dce60_clk_mgr.patch
 	patches.suse/ALSA-intel_hdmi-Fix-off-by-one-error-in-__hdmi_lpe_a.patch
 	patches.suse/ALSA-hda-ca0132-Fix-missing-error-handling-in-ca0132.patch
+	patches.suse/ASoC-SOF-amd-acp-loader-Use-GFP_KERNEL-for-DMA-alloc.patch
 
 	########################################################
 	# end of sorted patches
