--- a/series.conf
+++ b/series.conf
@@ -33464,6 +33464,7 @@
 	patches.suse/net-sched-mqprio-fix-stack-out-of-bounds-write-in-tc.patch
 	patches.suse/ALSA-intel_hdmi-Fix-off-by-one-error-in-__hdmi_lpe_a.patch
 	patches.suse/ALSA-hda-ca0132-Fix-missing-error-handling-in-ca0132.patch
+	patches.suse/gpio-mlxbf2-use-platform_get_irq_optional.patch
 
 	########################################################
 	# end of sorted patches
