ALSA: intel_hdmi: Fix off-by-one error in __hdmi_lpe_audio_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33462,6 +33462,7 @@
 	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_.patch
 	patches.suse/net-sched-mqprio-fix-stack-out-of-bounds-write-in-tc.patch
+	patches.suse/ALSA-intel_hdmi-Fix-off-by-one-error-in-__hdmi_lpe_a.patch
 
 	########################################################
 	# end of sorted patches
