--- a/series.conf
+++ b/series.conf
@@ -33463,6 +33463,7 @@
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_.patch
 	patches.suse/net-sched-mqprio-fix-stack-out-of-bounds-write-in-tc.patch
 	patches.suse/ALSA-intel_hdmi-Fix-off-by-one-error-in-__hdmi_lpe_a.patch
+	patches.suse/ALSA-hda-ca0132-Fix-missing-error-handling-in-ca0132.patch
 
 	########################################################
 	# end of sorted patches
