pNFS/flexfiles: don't attempt pnfs on fatal DS errors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33462,6 +33462,7 @@
 	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_.patch
 	patches.suse/net-sched-mqprio-fix-stack-out-of-bounds-write-in-tc.patch
+	patches.suse/pNFS-flexfiles-don-t-attempt-pnfs-on-fatal-DS-errors.patch
 
 	########################################################
 	# end of sorted patches
