NFS: Fix filehandle bounds checking in nfs_fh_to_dentry() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33463,6 +33463,7 @@
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_.patch
 	patches.suse/net-sched-mqprio-fix-stack-out-of-bounds-write-in-tc.patch
 	patches.suse/pNFS-flexfiles-don-t-attempt-pnfs-on-fatal-DS-errors.patch
+	patches.suse/NFS-Fix-filehandle-bounds-checking-in-nfs_fh_to_dentry.patch
 
 	########################################################
 	# end of sorted patches
