NFSv4.2: another fix for listxattr (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33464,6 +33464,7 @@
 	patches.suse/net-sched-mqprio-fix-stack-out-of-bounds-write-in-tc.patch
 	patches.suse/pNFS-flexfiles-don-t-attempt-pnfs-on-fatal-DS-errors.patch
 	patches.suse/NFS-Fix-filehandle-bounds-checking-in-nfs_fh_to_dentry.patch
+	patches.suse/NFSv4.2-another-fix-for-listxattr.patch
 
 	########################################################
 	# end of sorted patches
