NFS: Fixup allocation flags for nfsiod's __GFP_NORETRY (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33465,6 +33465,7 @@
 	patches.suse/pNFS-flexfiles-don-t-attempt-pnfs-on-fatal-DS-errors.patch
 	patches.suse/NFS-Fix-filehandle-bounds-checking-in-nfs_fh_to_dentry.patch
 	patches.suse/NFSv4.2-another-fix-for-listxattr.patch
+	patches.suse/NFS-Fixup-allocation-flags-for-nfsiod-s-__GFP_NORETRY.patch
 
 	########################################################
 	# end of sorted patches
