NFS: Fix the setting of capabilities when automounting a new filesystem (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33467,6 +33467,7 @@
 	patches.suse/NFSv4.2-another-fix-for-listxattr.patch
 	patches.suse/NFS-Fixup-allocation-flags-for-nfsiod-s-__GFP_NORETRY.patch
 	patches.suse/sunrpc-fix-client-side-handling-of-tls-alerts.patch
+	patches.suse/NFS-Fix-the-setting-of-capabilities-when-automounting-a-new-filesystem.patch
 
 	########################################################
 	# end of sorted patches
