--- a/series.conf
+++ b/series.conf
@@ -10688,6 +10688,7 @@
 	patches.suse/exfat-fdatasync-flag-should-be-same-like-generic_write_sync.patch
 	patches.suse/btrfs-fix-log-tree-replay-failure-due-to-file-with-0.patch
 	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
+	patches.suse/pNFS-flexfiles-don-t-attempt-pnfs-on-fatal-DS-errors.patch
 
 	########################################################
 	# end of sorted patches
