--- a/series.conf
+++ b/series.conf
@@ -10689,6 +10689,7 @@
 	patches.suse/btrfs-fix-log-tree-replay-failure-due-to-file-with-0.patch
 	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
 	patches.suse/pNFS-flexfiles-don-t-attempt-pnfs-on-fatal-DS-errors.patch
+	patches.suse/NFS-Fix-wakeup-of-__nfs_lookup_revalidate-in-unblock_revalidate.patch
 
 	########################################################
 	# end of sorted patches
