NFS: Fix filehandle bounds checking in nfs_fh_to_dentry() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10690,6 +10690,7 @@
 	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
 	patches.suse/pNFS-flexfiles-don-t-attempt-pnfs-on-fatal-DS-errors.patch
 	patches.suse/NFS-Fix-wakeup-of-__nfs_lookup_revalidate-in-unblock_revalidate.patch
+	patches.suse/NFS-Fix-filehandle-bounds-checking-in-nfs_fh_to_dentry.patch
 
 	########################################################
 	# end of sorted patches
