NFSv4.2: another fix for listxattr (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10691,6 +10691,7 @@
 	patches.suse/pNFS-flexfiles-don-t-attempt-pnfs-on-fatal-DS-errors.patch
 	patches.suse/NFS-Fix-wakeup-of-__nfs_lookup_revalidate-in-unblock_revalidate.patch
 	patches.suse/NFS-Fix-filehandle-bounds-checking-in-nfs_fh_to_dentry.patch
+	patches.suse/NFSv4.2-another-fix-for-listxattr.patch
 
 	########################################################
 	# end of sorted patches
