--- a/series.conf
+++ b/series.conf
@@ -33309,6 +33309,7 @@
 	patches.suse/soc-qcom-fix-endianness-for-QMI-header.patch
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
+	patches.suse/net-mana-Expose-additional-hardware-counters-for-dro.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
