--- a/series.conf
+++ b/series.conf
@@ -33314,6 +33314,7 @@
 	patches.suse/PCI-MSI-Export-pci_msix_prepare_desc-for-dynamic-MSI.patch
 	patches.suse/PCI-hv-Allow-dynamic-MSI-X-vector-allocation.patch
 	patches.suse/net-mana-explain-irq_setup-algorithm.patch
+	patches.suse/net-mana-Allow-irq_setup-to-skip-cpus-for-affinity.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
