hv_netvsc: Use VF's tso_max_size value when data path is VF (bsc#1246203).

--- a/series.conf
+++ b/series.conf
@@ -31527,6 +31527,7 @@
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
 	patches.suse/page_pool-avoid-infinite-loop-to-schedule-delayed-worker.patch
 	patches.suse/net-mana-Allow-tso_max_size-to-go-up-to-GSO_MAX_SIZE.patch
+	patches.suse/hv_netvsc-Use-VF-s-tso_max_size-value-when-data-path.patch
 	patches.suse/can-c_can-Use-of_property_present-to-test-existence-.patch
 	patches.suse/net-pktgen-fix-access-outside-of-user-given-buffer-in-pktg.patch
 	patches.suse/selftests-net-have-gro.sh-t-return-a-correct-exit-co.patch
