--- a/series.conf
+++ b/series.conf
@@ -33311,6 +33311,7 @@
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
 	patches.suse/net-mana-Expose-additional-hardware-counters-for-dro.patch
 	patches.suse/net-mana-Add-handler-for-hardware-servicing-events.patch
+	patches.suse/PCI-MSI-Export-pci_msix_prepare_desc-for-dynamic-MSI.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
