--- a/series.conf
+++ b/series.conf
@@ -33312,6 +33312,7 @@
 	patches.suse/net-mana-Expose-additional-hardware-counters-for-dro.patch
 	patches.suse/net-mana-Add-handler-for-hardware-servicing-events.patch
 	patches.suse/PCI-MSI-Export-pci_msix_prepare_desc-for-dynamic-MSI.patch
+	patches.suse/PCI-hv-Allow-dynamic-MSI-X-vector-allocation.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
