--- a/series.conf
+++ b/series.conf
@@ -33316,6 +33316,7 @@
 	patches.suse/net-mana-explain-irq_setup-algorithm.patch
 	patches.suse/net-mana-Allow-irq_setup-to-skip-cpus-for-affinity.patch
 	patches.suse/net-mana-Allocate-MSI-X-vectors-dynamically.patch
+	patches.suse/net-mana-Set-tx_packets-to-post-gso-processing-packe.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
