cifs: reconnect helper should set reconnect for the right channel (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -17257,6 +17257,7 @@
 	patches.suse/smb-client-fix-use-after-free-bug-in-cifs_debug_data_proc_show-.patch
 	patches.suse/smb-client-remove-extra-chan_count-check-in-__cifs_put_smb_ses-.patch
 	patches.suse/smb-client-fix-use-after-free-in-smb2_query_info_compound-.patch
+	patches.suse/cifs-reconnect-helper-should-set-reconnect-for-the-right-channel.patch
 	patches.suse/9p-trans_fd-Annotate-data-racy-writes-to-file-f_flag.patch
 	patches.suse/9p-v9fs_listxattr-fix-s-null-argument-warning.patch
 	patches.suse/9p-net-fix-possible-memory-leak-in-p9_check_errors.patch
