--- a/series.conf
+++ b/series.conf
@@ -10886,6 +10886,7 @@
 	patches.suse/smb-client-reduce-stack-usage-in-smb2_query_reparse_point-.patch
 	patches.suse/cifs-update-desired-access-while-requesting-for-directory-lease.patch
 	patches.suse/send-channel-sequence-number-in-SMB3-requests-after-reconnects.patch
+	patches.suse/SMB3-rename-macro-CIFS_SERVER_IS_CHAN-to-avoid-confusion.patch
 	patches.suse/mm-rename-arch-pte_mkwrite-s-to-pte_mkwrite_novma.patch
 	patches.suse/mm-move-pte-pmd_mkwrite-callers-with-no-vma-to-novma.patch
 	patches.suse/mm-make-pte_mkwrite-take-a-vma.patch
