module: Fix memory deallocation on error path in move_module() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33136,6 +33136,7 @@
 	patches.suse/ALSA-hda-Add-missing-NVIDIA-HDA-codec-IDs.patch
 	patches.suse/ASoC-fsl_asrc-use-internal-measured-ratio-for-non-id.patch
 	patches.suse/ASoC-cs35l56-probe-should-fail-if-the-device-ID-is-n.patch
+	patches.suse/module-Fix-memory-deallocation-on-error-path-in-move_modul.patch
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
