module: Restore the moduleparam prefix length check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33447,6 +33447,7 @@
 	patches.suse/pinmux-fix-race-causing-mux_owner-NULL-with-active-m.patch
 	patches.suse/i3c-fix-module_i3c_i2c_driver-with-I3C-n.patch
 	patches.suse/module-Remove-unnecessary-1-from-last_unloaded_module-name.patch
+	patches.suse/module-Restore-the-moduleparam-prefix-length-check.patch
 	patches.suse/ucount-fix-atomic_long_inc_below-argument-type.patch
 	patches.suse/rtc-ds1307-fix-incorrect-maximum-clock-rate-handling.patch
 	patches.suse/rtc-hym8563-fix-incorrect-maximum-clock-rate-handlin.patch
