ring-buffer: Do not allow events in NMI with generic atomic64 cmpxchg() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -30523,6 +30523,7 @@
 	patches.suse/ktest.pl-Remove-unused-declarations-in-run_bisect_te.patch
 	patches.suse/ktest.pl-Fix-typo-in-comment.patch
 	patches.suse/ktest.pl-Fix-typo-accesing.patch
+	patches.suse/ring-buffer-Do-not-allow-events-in-NMI-with-generic-atomic.patch
 	patches.suse/perf-Increase-MAX_NR_CPUS-to-4096.patch
 	patches.suse/perf-cpumap-Reduce-transitive-dependencies-on-libperf-MAX_NR_CPUS.patch
 	patches.suse/libperf-cpumap-Hide-reduce-scope-of-MAX_NR_CPUS.patch
