smb3: move server check earlier when setting channel sequence number (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12318,6 +12318,7 @@
 	patches.suse/ext4-move-setting-of-trimmed-bit-into-ext4_try_to_tr.patch
 	patches.suse/ext4-do-not-let-fstrim-block-system-suspend.patch
 	patches.suse/ext4-fix-rec_len-verify-error.patch
+	patches.suse/smb3-move-server-check-earlier-when-setting-channel-sequence-number.patch
 	patches.suse/panic-Reenable-preemption-in-WARN-slowpath.patch
 	patches.suse/objtool-Fix-_THIS_IP_-detection-for-cold-functions.patch
 	patches.suse/sched-fair-Optimize-should_we_balance-for-large-SMT-systems.patch
