RDMA/mana_ib: Add device statistics support (bsc#1246651).

--- a/series.conf
+++ b/series.conf
@@ -10651,6 +10651,7 @@
 	patches.suse/scsi-lpfc-Modify-end-of-life-adapters-model-descript.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.10.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.10-patches.patch
+	patches.suse/RDMA-mana_ib-Add-device-statistics-support.patch
 	patches.suse/RDMA-uverbs-Check-CAP_NET_RAW-in-user-namespace-for-.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-fl.patch
 	patches.suse/RDMA-mlx5-Check-CAP_NET_RAW-in-user-namespace-for-an.patch
