--- a/series.conf
+++ b/series.conf
@@ -10542,6 +10542,7 @@
 	patches.suse/net-mana-explain-irq_setup-algorithm.patch
 	patches.suse/net-mana-Allow-irq_setup-to-skip-cpus-for-affinity.patch
 	patches.suse/net-mana-Allocate-MSI-X-vectors-dynamically.patch
+	patches.suse/net-mana-Fix-potential-deadlocks-in-mana-napi-ops.patch
 	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
