--- a/series.conf
+++ b/series.conf
@@ -10553,6 +10553,7 @@
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
 	patches.suse/iwlwifi-Add-missing-check-for-alloc_ordered_workqueu.patch
 	patches.suse/bpf-sockmap-Fix-psock-incorrectly-pointing-to-sk.patch
+	patches.suse/net-mana-Handle-Reset-Request-from-MANA-NIC.patch
 	patches.suse/wifi-iwlwifi-Fix-error-code-in-iwl_op_mode_dvm_start.patch
 	patches.suse/net-sched-Restrict-conditions-for-adding-duplicating.patch
 	patches.suse/RDMA-mlx5-Fix-UMR-modifying-of-mkey-page-size.patch
