--- a/series.conf
+++ b/series.conf
@@ -10537,6 +10537,7 @@
 	patches.suse/staging-media-atomisp-Fix-stack-buffer-overflow-in-g.patch
 	patches.suse/net-mana-Expose-additional-hardware-counters-for-dro.patch
 	patches.suse/net-mana-Add-handler-for-hardware-servicing-events.patch
+	patches.suse/PCI-MSI-Export-pci_msix_prepare_desc-for-dynamic-MSI.patch
 	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
