--- a/series.conf
+++ b/series.conf
@@ -10546,6 +10546,7 @@
 	patches.suse/net-mana-Add-support-for-net_shaper_ops.patch
 	patches.suse/net-mana-Add-speed-support-in-mana_get_link_ksetting.patch
 	patches.suse/net-mana-Handle-unsupported-HWC-commands.patch
+	patches.suse/net-mana-Set-tx_packets-to-post-gso-processing-packe.patch
 	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
