net: mana: Expose additional hardware counters for drop and TC via ethtool (bsc#1245729).

--- a/series.conf
+++ b/series.conf
@@ -10535,6 +10535,7 @@
 	patches.suse/s390-mm-Remove-possible-false-positive-warning-in-pte_free.patch
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
 	patches.suse/staging-media-atomisp-Fix-stack-buffer-overflow-in-g.patch
+	patches.suse/net-mana-Expose-additional-hardware-counters-for-dro.patch
 	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
