--- a/series.conf
+++ b/series.conf
@@ -10552,6 +10552,7 @@
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
 	patches.suse/iwlwifi-Add-missing-check-for-alloc_ordered_workqueu.patch
+	patches.suse/net-mana-Fix-build-errors-when-CONFIG_NET_SHAPER-is-.patch
 	patches.suse/bpf-sockmap-Fix-psock-incorrectly-pointing-to-sk.patch
 	patches.suse/net-mana-Handle-Reset-Request-from-MANA-NIC.patch
 	patches.suse/wifi-iwlwifi-Fix-error-code-in-iwl_op_mode_dvm_start.patch
