--- a/series.conf
+++ b/series.conf
@@ -10701,6 +10701,7 @@
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
 	patches.suse/maple_tree-fix-status-setup-on-restore-to-active.patch
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
+	patches.suse/smb-client-fix-netns-refcount-leak-after-net_passive-changes.patch
 	patches.suse/HID-apple-validate-feature-report-field-count-to-pre.patch
 	patches.suse/power-supply-cpcap-charger-Fix-null-check-for-power_.patch
 	patches.suse/power-supply-max14577-Handle-NULL-pdata-when-CONFIG_.patch
