iommu: Handle race with default domain setup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7069,6 +7069,7 @@
 	patches.suse/scsi-st-ERASE-does-not-change-tape-location.patch
 	patches.suse/scsi-st-Tighten-the-page-format-heuristics-with-MODE-SELEC.patch
 	patches.suse/genirq-msi-Store-the-IOMMU-IOVA-directly-in-msi_desc.patch
+	patches.suse/iommu-Handle-race-with-default-domain-setup.patch
 	patches.suse/iommu-vt-d-Fix-system-hang-on-reboot-f.patch
 	patches.suse/iommu-vt-d-Fix-possible-circular-locking-dependency.patch
 	patches.suse/iommu-amd-Fix-header-file
