--- a/series.conf
+++ b/series.conf
@@ -31531,6 +31531,7 @@
 	patches.suse/ice-irdma-move-interrupts-code-to-irdma.patch
 	patches.suse/ice-treat-dyn_allowed-only-as-suggestion.patch
 	patches.suse/ice-enable_rdma-devlink-param.patch
+	patches.suse/ice-simplify-VF-MSI-X-managing.patch
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990B-composit.patch
 	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
