ice: Fix signedness bug in ice_init_interrupt_scheme() (bsc#1247712).

--- a/series.conf
+++ b/series.conf
@@ -31536,6 +31536,7 @@
 	patches.suse/net-usb-qmi_wwan-add-Telit-Cinterion-FN990B-composit.patch
 	patches.suse/r8152-add-vendor-device-ID-pair-for-Dell-Alienware-A.patch
 	patches.suse/net-usb-asix_devices-add-FiberGecko-DeviceID.patch
+	patches.suse/ice-Fix-signedness-bug-in-ice_init_interrupt_scheme.patch
 	patches.suse/page_pool-avoid-infinite-loop-to-schedule-delayed-worker.patch
 	patches.suse/net-mana-Allow-tso_max_size-to-go-up-to-GSO_MAX_SIZE.patch
 	patches.suse/hv_netvsc-Use-VF-s-tso_max_size-value-when-data-path.patch
